# WazabiEDR_Utils

./: ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: release.yml
doc/reference/: cli-reference.md
doc/usage/: managing-plugins.md
src/wedr_plugin/: main.rs  manifest.rs  sha256.rs  uuid.rs
src/wedr_waza_check/: main.rs
