[package]
name = "WazabiEDR_Utils"
version = "0.1.0"
edition = "2024"
description = "Operator-side tooling for WazabiEDR (plugin enrolment, …)."

[[bin]]
name = "wedr-plugin"
path = "src/wedr_plugin/main.rs"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
